set overflow-x to hidden on ui-content div. prevents page content from breaking out beyond viewport. Fixes #353

--- a/themes/default/jquery.mobile.core.css
+++ b/themes/default/jquery.mobile.core.css
@@ -40,7 +40,7 @@
 .ui-header .ui-btn-right { position: absolute; right: 10px; top: .4em; }
 
 /*content area*/
-.ui-content { border-width: 0; overflow: visible; padding: 15px; }
+.ui-content { border-width: 0; overflow: visible; overflow-x: hidden; padding: 15px; }
 .ui-page-fullscreen .ui-content { padding:0; }
 
 /* icons sizing */
